--- a/simple-js-app-main/css/styles.css
+++ b/simple-js-app-main/css/styles.css
@@ -69,6 +69,12 @@ h1 {
     }
 }
 
+/* Screen reader */
+.skip-navigation {
+    @include sr-only;
+    @include sr-only-focusable;
+  }
+
 /* Modal CSS */
 #modal-container {
     display: none;
