--- a/simple-js-app-main/css/styles.css
+++ b/simple-js-app-main/css/styles.css
@@ -1,18 +1,31 @@
 :root {
     --primary-color: white;
-    --button-color: rgb(161, 161, 75);
+    --button-color: #B3A125;
     --body-text-color: white;
 }
 
 body {
     /* font-family: 'Courier New', Courier, monospace; */
-    font-size: 30px;
     background-color: var(--primary-color);
 }
 
 h1 {
+    margin-top: 20px;
     text-align: center;
     text-transform: capitalize;
+}
+
+.poke-img {
+    display: block;
+    margin: auto;
+    margin-top: 15px;
+    width: 50%;
+}
+
+.credit {
+    text-align: center;
+    font-weight: bold;
+    margin-top: 15px;
 }
 
 .pokemon-list {
@@ -21,8 +34,8 @@ h1 {
 
 .container {
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+    padding-right: 20px;
+    padding-left: 20px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -40,6 +53,7 @@ h1 {
     border: none;
     /* justify-content: center;  */
 }
+
 .pokemon-button {
     text-transform: capitalize;
     background-color: var(--button-color);
@@ -49,7 +63,7 @@ h1 {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 20px;
+    font-size: 16px;
     margin: 10px;
     cursor: pointer;
     transition-duration: 0.4s;
@@ -85,49 +99,7 @@ h1 {
     }
 }
 
-/* Screen reader */
-.skip-navigation {
-    @include sr-only;
-    @include sr-only-focusable;
-  }
-
 /* Modal CSS */
 #modal-container {
     display: none;
 }
-
-#modal-container.is-visible {
-    position: fixed;
-    padding: 20px;
-    box-sizing: border-box;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-
-
-    /* To show above other content */
-    z-index: 999;
-
-    /* To allow scrolling if the screen is not high enough */
-    overflow: auto;
-
-    /* To center the modal */
-    display: grid;
-    text-align: center;
-    
-}
-
-.modal-close {
-    float: right;
-    -webkit-appearance: none;
-    border: 0;
-    background: none;
-    color: gray;
-    text-decoration: underline;
-}
-
-/* #modal-container.is-visible {
-    display: block;
-} */
