--- a/simple-js-app-main/css/styles.css
+++ b/simple-js-app-main/css/styles.css
@@ -5,11 +5,13 @@
 }
 
 body {
-    /* font-family: 'Courier New', Courier, monospace; */
+    font-family: 'Courier New', Courier, monospace;
+
     background-color: var(--primary-color);
 }
 
 h1 {
+    font-weight: bold;
     margin-top: 20px;
     text-align: center;
     text-transform: capitalize;
